[package]
name = "hl-oracle"
version = "0.1.0"
edition = "2024"
description = "Local low-latency reconstruction of Hyperliquid's spot oracle, with a live monitor"
license = "MIT OR Apache-2.0"
keywords = ["hyperliquid", "oracle", "trading", "websocket", "market-data"]
categories = ["finance", "api-bindings"]

[dependencies]
anyhow = "1.0.103"
bytes = "1.12.1"
clap = { version = "4.6.1", features = ["derive"] }
crossterm = "0.29.0"
fastwebsockets = { version = "0.10.0", features = ["upgrade"] }
http-body-util = "0.1.3"
hyper = { version = "1.10.1", features = ["client", "http1"] }
hyper-util = { version = "0.1.20", features = ["tokio"] }
kanal = "0.1.1"
ratatui = "0.30.2"
prost = "0.14.4"
rustls = "0.23.41"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = { version = "1.0.150", features = ["raw_value"] }
thiserror = "2.0.18"
tokio = { version = "1.52.3", features = ["macros", "net", "rt-multi-thread", "signal", "time"] }
tokio-rustls = "0.26.4"
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
url = "2.5.8"
webpki-roots = "1.0.8"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = true
panic = "abort"
